--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,11 +23,16 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-rate-limit": "^7.4.0",
+    "joi": "^17.13.3",
+    "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.2"
+    "mysql2": "^3.11.2",
+    "uuid": "^10.0.0"
   }
 }
