--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.2",
+    "twilio": "^5.3.2",
     "uuid": "^10.0.0"
   }
 }
