[ADD] Entities with typeORM

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES6",                        
-    "module": "commonjs",                    
-    "rootDir": "./src",                     
-    "outDir": "./dist",                     
-    "strict": true,                         
-    "esModuleInterop": true,                
-    "skipLibCheck": true,                   
-    "forceConsistentCasingInFileNames": true
-  }
+    "target": "ES6",
+    "module": "commonjs",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "outDir": "./dist"
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
